--- a/toe.css
+++ b/toe.css
@@ -117,3 +117,23 @@ select {
     padding: 0.4rem 0.8rem;
   }
 }
+
+.sub-board {
+  position: relative;
+}
+
+.sub-board-winner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 200px;
+  color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  pointer-events: none;
+  z-index: 2;
+}
