--- a/toe.css
+++ b/toe.css
@@ -14,7 +14,7 @@ body {
 
 h1 {
   font-family: 'Michroma', sans-serif;
-  margin-bottom: 20px;
+  margin-bottom: 0.5rem;
 }
 
 /* === Game Board === */
